[package]
name = "comicview"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15.11"
serde_derive = "1.0.219"
once_cell = "1.21.1"

# quinn dependencies
anyhow = "1.0.22"
quinn = "0.11.7"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pemfile = "2"
rustls-platform-verifier = "0.5"
rustls-pki-types = "1.7"
clap = { version = "4", features = ["derive"] }
quinn-proto = "0.11.10"
quinn-udp = "0.5.10"
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
url = "2"
futures-lite = { version = "2.0.0", default-features = false }
tokio = { version = "1.28.1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
directories-next = "2.0.0"
rcgen = "0.13"
image = "0.25.6"
toml = "0.8.20"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
eframe = {version="0.31.1" }
egui_extras = { version = "0.31.1", features = ["default", "all_loaders"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
]}
egui="0.31.1"
rfd = "0.15.3"