[package]
name = "comicview"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = { version = "4.5.0" }

config = "0.15.11"
serde_derive = "1.0.219"
once_cell = "1.21.1"

# quinn dependencies
anyhow = "1.0.22"
quinn = "0.11.7"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pemfile = "2"
rustls-platform-verifier = "0.5"
rustls-pki-types = "1.7"
clap = { version = "4", features = ["derive"] }
quinn-proto = "0.11.10"
quinn-udp = "0.5.10"
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
url = "2"
futures-lite = { version = "2.0.0", default-features = false }
tokio = { version = "1.28.1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
directories-next = "2.0.0"
rcgen = "0.13"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
toml = "0.8.20"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
eframe = {version="0.31.1" }
egui_extras = { version = "0.31.1", features = ["default", "all_loaders"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
]}
egui="0.31.1"
rfd = "0.15.3"

reqwest = { version = "0.12", features = ["rustls-tls", "json", "__internal_proxy_sys_no_cache", "cookies"], default-features = false }
reqwest-retry = { version = "0.6.1" }
reqwest-middleware = { version = "0.3.3 " }

base64 = { version = "0.22" }
md5 = { version = "0.7.0" }
aes = { version = "0.8.4" }

bytes = { version = "1.7.2" }
showfile = { version = "0.1.1" }
path-slash = { version = "0.2.1" }
lopdf = { version = "0.34.0" }
flate2 = { version = "1.0.34" }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
specta = "1.0.5"
walkdir = "2.3"