[package]
name = "comicview"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comicview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15.11"
serde_derive = "1.0.219"
once_cell = "1.21.1"

# quinn dependencies
anyhow = "1.0.22"
quinn = "0.11.7"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
quinn-proto = "0.11.10"
quinn-udp = "0.5.10"
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
url = "2"
futures-lite = { version = "2.0.0", default-features = false }